--- a/index.html
+++ b/index.html
@@ -244,9 +244,9 @@
 				<div class="row">
 					<div class="col-md-3 col-sm-6 animate-box">
 					<div class="price-box">
-						<h2 class="pricing-plan">Маленька допомога. А ти вже донатив на Зсу?</h2>
+						<h2 class="pricing-plan">Маленька допомога.</h2>
 						<div class="price"><sup class="currency">$</sup>2</div>
-						<p>Ди дасиш 2 з наших людей каву!</p>
+						<p>Ти дасиш 2 з наших людей каву!</p>
 						<a href="buymeacoffee.com/UkraineGrivnya" class="btn btn-default btn-sm">Донат! </a>
 						
 					</div>
@@ -260,9 +260,9 @@
 				</div>
 				<div class="col-md-3 col-sm-6 animate-box">
 					<div class="price-box">
-						<h2 class="pricing-plan">Середня підтримка. А ти вже донатив на Зсу?</h2>
+						<h2 class="pricing-plan">Середня підтримка.</h2>
 						<div class="price"><sup class="currency">$</sup>5</div>
-						<p>Ди дасиш 5 з наших людей каву!</p>
+						<p>Ти дасиш 5 з наших людей каву!</p>
 						<a href="buymeacoffee.com/UkraineGrivnya" class="btn btn-default btn-sm">Донат!</a>
 					</div>
 				</div>
@@ -278,9 +278,9 @@
 				<div class="col-md-3 col-sm-6 animate-box">
 					<div class="price-box popular">
 						<div class="popular-text">х30</div>
-						<h2 class="pricing-plan">Кібер кіл. А ти вже донатив на Зсу?</h2>
+						<h2 class="pricing-plan">Кібер кіл.</h2>
 						<div class="price"><sup class="currency">$</sup>30</div>
-						<p>Ди дасиш шам поснідати!</p>
+						<p>Ти дасиш шам поснідати!</p>
 						<a href="buymeacoffee.com/UkraineGrivnya" class="btn btn-default btn-sm">Донат! </a>
 				</div>
 			</div>
